Lazily initialize LogToSystemConsole flag to reduce memory usage https://bugs.webkit.org/show_bug.cgi?id=143506

Reviewed by Mark Lam.

Only call into CF preferences code when we need to in order to reduce memory usage.

* inspector/JSGlobalObjectConsoleClient.cpp:
(Inspector::JSGlobalObjectConsoleClient::logToSystemConsole):
(Inspector::JSGlobalObjectConsoleClient::setLogToSystemConsole):
(Inspector::JSGlobalObjectConsoleClient::initializeLogToSystemConsole):
(Inspector::JSGlobalObjectConsoleClient::JSGlobalObjectConsoleClient):


Canonical link: https://commits.webkit.org/161542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182535 268f45cc-cd09-0410-ab3c-d52691b4dbfc